--- a/css/index.css
+++ b/css/index.css
@@ -537,7 +537,6 @@ body{
     cursor: pointer;
     position: relative;
     transition: all .4s ease;
-
 }
 .cv a button:hover{
     opacity: 1;
@@ -697,7 +696,7 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:95%;
+    width:90%;
     border-radius: 10px;
     background: #c70039;
 }
@@ -715,7 +714,7 @@ body{
     border-radius: 10px;
     background: #c70039;
 }
-.adobe-progress{
+.bootstrap-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -724,7 +723,7 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:83%;
+    width:80%;
     border-radius: 10px;
     background: #c70039;
 }
@@ -736,7 +735,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width:85%;
+    width:50%;
     border-radius: 10px;
     background: #c70039;
     transition: all .4s ease;
@@ -750,11 +749,11 @@ body{
     align-items: center;
     justify-content: center;
     transition: all .4s ease;
-    width:94%;
+    width:40%;
     border-radius: 10px;
     background: #c70039;
 }
-.seo-progress{
+.git-progress{
     position: absolute;
     top:10%;
     left:1%;
@@ -762,7 +761,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width:84%;
+    width:50%;
     border-radius: 10px;
     transition: all .4s ease;
     background: #c70039;
